--- a/src/index.template.html
+++ b/src/index.template.html
@@ -23,7 +23,7 @@
     let e = new WxShare({
         title: "<%= productName %>",
         desc: "<%= productDescription %>",
-        cover: '<% productHomePage %>/assets/icons/logo.png',
+        cover: '<% productHomePage %>/icons/logo.jpg',
         shareLink: "<% productHomePage %>/dist/spa/index.html",
         uri: window.location.href,
         debug: false,
